types and +- arithmetic

--- a/.velle/main.cfg
+++ b/.velle/main.cfg
@@ -2,5 +2,10 @@ project {
   name = "parsing-lib"
 }
 commands {
-
+  on {
+     changed {
+       folder = "src/Parsing"
+       do     = "stack test"
+     }
+  }
 }
