--- a/parsing-lib.cabal
+++ b/parsing-lib.cabal
@@ -25,13 +25,14 @@ source-repository head
 
 library
   exposed-modules:
-      Lib
+      Parsing.Lizante
   other-modules:
       Paths_parsing_lib
   hs-source-dirs:
       src
   build-depends:
-      base >=4.7 && <5
+      HUnit
+    , base >=4.7 && <5
   default-language: Haskell2010
 
 executable parsing-lib-exe
@@ -42,7 +43,8 @@ executable parsing-lib-exe
       app
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      HUnit
+    , base >=4.7 && <5
     , parsing-lib
   default-language: Haskell2010
 
@@ -55,6 +57,7 @@ test-suite parsing-lib-test
       test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      HUnit
+    , base >=4.7 && <5
     , parsing-lib
   default-language: Haskell2010
