--- a/parsing-lib.cabal
+++ b/parsing-lib.cabal
@@ -26,6 +26,7 @@ source-repository head
 library
   exposed-modules:
       Parsing.Lizante
+      Parsing.Lizante.Parsers
       Parsing.Lizante.Utils
   other-modules:
       Paths_parsing_lib
